--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -8,15 +8,15 @@ permissions:
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'Destroy Terraform'
+    runs-on: ubuntu-latest
+    environment: production
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION }}
       ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
       TF_WORKING_DIRECTORY: ./src
-    runs-on: ubuntu-latest
-    environment: production
 
     defaults:
       run:
@@ -30,9 +30,9 @@ jobs:
       uses: hashicorp/setup-terraform@v3
 
     - name: Terraform Init
-      working-directory: ${{ env.TF_WORKING_DIRECTORY }}
       run: terraform init
+      working-directory: ${{ env.TF_WORKING_DIRECTORY }}
     
     - name: Terraform Destroy
-      working-directory: ${{ env.TF_WORKING_DIRECTORY }}
       run: terraform destroy -auto-approve
+      working-directory: ${{ env.TF_WORKING_DIRECTORY }}
