[add] minor improves

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   terraform:
-    name: 'Destroy Terraform'
+    name: 'Terraform'
     runs-on: ubuntu-latest
     environment: production
     env:
