--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   terraform:
-    name: 'Build Terraform'
+    name: 'Terraform'
     runs-on: ubuntu-latest
     environment: production
     env:
